[workspace]
resolver = "3"

[workspace.dependencies]
compio = { version = "0.19.0-rc.1", default-features = false }
flume = "0.12.0"
futures-executor = "0.3"
futures-util = "0.3"
rustix = "1"
smol = "2"
tokio = "1"

[package]
name = "compio-compat"
version = "0.1.0-rc.1"
edition = "2024"
description = "Compatibility layer for compio to work with various async runtimes."
readme = "README.md"
categories = ["asynchronous", "filesystem", "network-programming"]
keywords = ["async", "fs", "iocp", "io-uring", "net"]
license = "MIT"
repository = "https://github.com/compio-rs/compio-compat"

[dependencies]
compio = { workspace = true, default-features = false, features = ["runtime"] }
compio-log = "0.1.0"

cfg-if = "1.0.4"
mod_use = "0.2.3"
pin-project-lite = "0.2.7"

[target.'cfg(windows)'.dependencies]
flume = { workspace = true }
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading"] }

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { workspace = true, features = ["event", "io_uring"] }

[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, optional = true, features = ["net", "time"] }

smol = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

flume = { workspace = true, optional = true }
rustix = { workspace = true, optional = true, features = ["pipe"] }

[dev-dependencies]
compio = { workspace = true, default-features = false, features = ["fs"] }

tokio = { workspace = true, features = ["rt", "macros", "fs", "io-util"] }
futures-executor = { workspace = true }
smol = { workspace = true }

[features]
io-uring = ["compio/io-uring"]
polling = ["compio/polling"]
futures = ["dep:flume", "dep:rustix"]
tokio = ["dep:tokio"]
smol = ["dep:smol", "dep:futures-util"]
enable_log = ["compio-log/enable_log"]
